--- a/index.html
+++ b/index.html
@@ -1,107 +1,149 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rajput Travel Ali Pur - Online Seat Booking</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f7f9fb;
-      text-align: center;
-      margin: 0;
-      padding: 20px;
-    }
-    h1 {
-      background: #004aad;
-      color: white;
-      padding: 15px;
-      border-radius: 10px;
-    }
-    .bus {
-      display: grid;
-      grid-template-columns: repeat(5, 90px);
-      gap: 12px;
-      justify-content: center;
-      margin-top: 25px;
-    }
-    .seat {
-      width: 90px;
-      height: 70px;
-      background: #2ecc71;
-      color: white;
-      border-radius: 10px;
-      font-weight: bold;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-      transition: all 0.2s;
-    }
-    .seat.booked {
-      background: #e74c3c;
-    }
-    .footer {
-      margin-top: 25px;
-      color: #444;
-      font-size: 15px;
-    }
-    .credit {
-      margin-top: 40px;
-      font-size: 14px;
-      color: #777;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Login</title>
+<style>
+  body{
+    margin:0;
+    font-family: "Poppins", sans-serif;
+    background:#e8e8ec;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    height:100vh;
+  }
+  .container{
+    width:900px;
+    background:white;
+    border-radius:20px;
+    display:flex;
+    overflow:hidden;
+    box-shadow:0 5px 30px rgba(0,0,0,0.15);
+  }
+  .left{
+    flex:1;
+    background:#e8e8ec;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+  }
+  .left img{
+    width:90%;
+  }
+  .right{
+    flex:1;
+    background:#ffffff;
+    padding:60px 50px;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+  }
+  .logo{
+    font-size:35px;
+    text-align:center;
+    margin-bottom:20px;
+  }
+  h2{
+    margin:0;
+    text-align:center;
+    font-size:28px;
+    font-weight:700;
+    margin-bottom:5px;
+  }
+  p{
+    text-align:center;
+    color:#6d6d6d;
+    margin-bottom:40px;
+    font-size:14px;
+  }
+  label{
+    font-size:14px;
+    color:#333;
+  }
+  input{
+    width:100%;
+    padding:12px 5px;
+    margin-top:3px;
+    margin-bottom:20px;
+    border:none;
+    border-bottom:1px solid #ccc;
+    outline:none;
+    font-size:15px;
+  }
+  .row{
+    display:flex;
+    justify-content:space-between;
+    font-size:14px;
+    margin-bottom:25px;
+  }
+  .row a{
+    color:#6d6d6d;
+    text-decoration:none;
+  }
+  .login-btn{
+    width:100%;
+    background:black;
+    color:white;
+    padding:15px;
+    border:none;
+    border-radius:40px;
+    font-size:16px;
+    cursor:pointer;
+    margin-bottom:20px;
+  }
+  .google-btn{
+    width:100%;
+    background:#f7f7f7;
+    border-radius:40px;
+    padding:15px;
+    text-align:center;
+    font-size:16px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    gap:10px;
+    cursor:pointer;
+    border:1px solid #e3e3e3;
+  }
+  .bottom-text{
+    text-align:center;
+    margin-top:15px;
+    font-size:14px;
+  }
+  .bottom-text a{
+    text-decoration:none;
+    color:black;
+    font-weight:600;
+  }
+</style>
 </head>
-<body>
-  <h1>🚌 Rajput Travel Ali Pur - Online Bus Seat Booking System</h1>
-  <div class="bus" id="bus"></div>
-  <div class="footer">
-    ✅ Green = Available | 🔴 Red = Booked
+<body><div class="container">
+  <div class="left">
+    <img src="/Internal storage/1/1745260667828.png" alt="illustration" />
+  </div>  <div class="right">
+    <div class="logo">✚</div>
+    <h2>Welcome back!</h2>
+    <p>Please enter your details</p><label>Email</label>
+<input type="text" placeholder="Enter your email" />
+
+<label>Password</label>
+<input type="password" placeholder="Enter your password" />
+
+<div class="row">
+  <div><input type="checkbox" /> Remember for 30 days</div>
+  <a href="#">Forgot password?</a>
+</div>
+
+<button class="login-btn">Log in</button>
+
+<div class="google-btn">
+  <img src="/Internal storage/1/1745260667828.png" width="20">
+  Log in with Google
+</div>
+
+<div class="bottom-text">Don't have an account? <a href="#">Sign Up</a></div>
+
   </div>
-  <div class="credit">Developed by ChatGPT for Rajput Travel Ali Pur</div>
-
-  <script>
-    const seatsData = JSON.parse(localStorage.getItem("rajputSeats") || "{}");
-    const busDiv = document.getElementById("bus");
-
-    function renderSeats() {
-      busDiv.innerHTML = "";
-      for (let i = 1; i <= 45; i++) {
-        const seat = document.createElement("div");
-        seat.classList.add("seat");
-        seat.id = "seat" + i;
-
-        if (seatsData[i]) {
-          seat.classList.add("booked");
-          seat.textContent = seatsData[i];
-        } else {
-          seat.textContent = i;
-        }
-
-        seat.onclick = () => handleSeatClick(i);
-        busDiv.appendChild(seat);
-      }
-    }
-
-    function handleSeatClick(number) {
-      if (seatsData[number]) {
-        if (confirm(`Seat ${number} is booked by ${seatsData[number]}. Cancel booking?`)) {
-          delete seatsData[number];
-          localStorage.setItem("rajputSeats", JSON.stringify(seatsData));
-          renderSeats();
-        }
-      } else {
-        const name = prompt(`Enter name to book seat ${number}:`);
-        if (name) {
-          seatsData[number] = name;
-          localStorage.setItem("rajputSeats", JSON.stringify(seatsData));
-          renderSeats();
-        }
-      }
-    }
-
-    renderSeats();
-  </script>
-</body>
+</div></body>
 </html>
